--- a/fem1-popov-step-ham/css/style.css
+++ b/fem1-popov-step-ham/css/style.css
@@ -228,10 +228,15 @@ body {
     transform: rotate(45deg);
 }
 
+.services-content-wrapper {
+    height: 170px;
+}
+
 .services-content {
     font-size: 14px;
     font-weight: 300;
     line-height: 2;
+    opacity: 1;
 }
 
 .services-content-img {
@@ -306,6 +311,7 @@ body {
 .works-content-hover {
     text-align: center;
     border-top: 3px solid #18cfab;
+    box-sizing: border-box;
 }
 
 .works-content-hover-btn {
@@ -341,7 +347,7 @@ body {
 
 .load-more-btn {
     display: block;
-    margin: 80px auto 0 auto;
+    margin: 50px auto 0 auto;
     padding: 20px 30px;
     background-color: #18cfab;
     border-radius: 5px;
@@ -527,6 +533,7 @@ body {
 
 .footer {
     padding: 50px 0;
+    margin-top: 100px;
     margin-bottom: 10px;
     background-color: #22353F;
     text-align: center;
@@ -568,22 +575,22 @@ body {
 
 .preloader {
     display: none;
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     text-align: center;
 }
 
 .dash {
     display: inline-block;
-    margin: 0 15px;
-    width: 35px;
-    height: 15px;
-    border-radius: 8px;
+    margin: 0 7px;
+    width: 20px;
+    height: 10px;
+    border-radius: 5px;
     background: #00CBF6;
-    box-shadow: 0 0 10px 0 #FECDFF;
 }
 
 .uno {
-    margin-right: -18px;
+    margin-right: -10px;
     transform-origin: left;
     animation: spin 1.5s linear infinite;
 }
@@ -714,8 +721,35 @@ body {
     width: 30%;
     margin: 10px;
 }
+
 .grid-item > img {
     display: block;
     width: 100%;
 }
+
 .grid-item--width2 { width: 400px; }
+
+.grid-item-hover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #00000080;
+    text-align: center;
+}
+
+.grid-item-hover-btn {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0 10px;
+    font-size: 18px;
+    padding: 10px 12px;
+    color: #fff;
+    background-color: #00CBF6;
+    border: none;
+    border-radius: none;
+}
+
+.grid-item-hover-btn:hover {
+    background-color: #18cfab;
+}
