--- a/fem1-popov-step-ham/css/style.css
+++ b/fem1-popov-step-ham/css/style.css
@@ -86,8 +86,11 @@ body {
     padding: 49px 10px;
 }
 
+.header-container {
+    padding-top: 180px;
+}
+
 .header-title {
-    margin-top: 180px;
     font-size: 35px;
     font-weight: 700;
     color: #fff;
