--- a/sapper/css/style.css
+++ b/sapper/css/style.css
@@ -8,8 +8,9 @@
 .cell {
     width: 50px;
     height: 50px;
-    border: 1px solid black;
+    border: 1px solid #555;
     background-color: #aaa;
+    border-radius: 2px;
 }
 
 .icon {
